# thinmatrix-gl-tutorials

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: camera.cpp  camera.hpp  display_manager.cpp  display_manager.hpp  entity.cpp  entity.hpp  entity_renderer.cpp  entity_renderer.hpp  gl_handles.hpp  glad.c  gui_renderer.cpp  gui_renderer.hpp  gui_shader.cpp  gui_shader.hpp  gui_texture.cpp  gui_texture.hpp  light.hpp  loader.cpp  loader.hpp  main_game_loop.cpp  master_renderer.cpp  master_renderer.hpp  maths.cpp  maths.hpp  model_texture.cpp  model_texture.hpp  mouse_picker.cpp  mouse_picker.hpp  obj_loader.cpp  obj_loader.hpp  player.cpp  player.hpp  raw_model.cpp  raw_model.hpp  renderer.cpp  renderer.hpp  sdl_handles.hpp  shader_program.cpp  shader_program.hpp  skybox_renderer.cpp  (+21 more)
src/shaders/: fragment_shader.frag  gui_vertex_shader.vert  skybox_fragment_shader.frag  skybox_vertex_shader.vert  terrain_fragment_shader.frag  terrain_vertex_shader.vert  vertex_shader.vert  water_fragment_shader.frag  water_vertex_shader.vert
